# EJFP

./: .gitignore  README.md
lib/jsmn/: jsmn.h  jsmn_fwd.h
src/: LocusJsonSerde.cpp  LocusJsonSerde.hpp
src/ejfp/: deserialization.c  deserialization.h  ejfp.c  ejfp.h  error.c  error.h  fieldVariant.h  print.h  serialization.c  serialization.h
test/mtojson_test/: CMakeLists.txt  Makefile  main.cpp  mtojson
test/serialization_test/: CMakeLists.txt  Makefile  ejfp  main.cpp
